<resources>
    <!--Adapted from https://github.com/googlesamples/google-services/blob/master/android/signin/app/src/main/java/com/google/samples-->
    <string name="app_name">Studdy Buddy</string>
    <string name="action_about">About</string>
    <string name="server_client_id">811543573577-pd58ar8j2svhah24ogqgeis0s3d3kuse.apps.googleusercontent.com</string>

    <string name="title_text">Studdy Buddy</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">SIGN OUT</string>
    <string name="HOME">HOME</string>
    <string name="classes">CLASSES</string>
    <string name="homework">HOMEWORK</string>
    <string name="sessions">SESSIONS</string>

    <!-- Content Description for images -->
    <string name="desc_study_icon">App Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>

    <!-- About Screen -->
    <string name="team_members">Scott Doberstein\nNelly Cheboi\nAlex Jelinek\nChristopher Green\nKaylee Nolan</string>
    <string name="team_name">Augie Snackers</string>
    <string name="graphics_credit">Graphics: Alex Jelinek, Kaylee Nolan</string>


    <!-- SEARCH BAR -->
    <string name="search_hint">Search by tag</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>


</resources>
