<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_900"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".legacy.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title_text"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:height="50dp"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue_grey_700"
            android:gravity="center|top"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:layout_margin="15dp"/>

            <Button
                    android:id="@+id/class_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classes"
                    android:background="@drawable/googleg_color"
                    android:layout_margin="15dp" />

            <Button
                android:id="@+id/homework_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homework"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/session_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sessions"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:layout_margin="15dp"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>