<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/blue_grey_500">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewAbout"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/studdy_buddy_icon"
            android:contentDescription="@string/desc_study_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/team_name"
            android:id="@+id/aboutTextView0"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:padding="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/team_members"
            android:id="@+id/aboutTextView1"
            android:layout_gravity="center_horizontal"
            android:textSize="35dp"/>

        <TextView
            android:paddingTop="20dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/graphics_credit"
            android:id="@+id/graphics"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLOSE"
        android:id="@+id/buttonAbout"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>